--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "chat-playground-thing-yay",
+  "name": "chat-playground-thing",
   "version": "0.1.0",
   "description": "A test area for my chat things",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "run-test"
   },
   "repository": {
@@ -15,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/Squirrel-314/chat-playground-thing-yay/issues"
   },
-  "homepage": "https://github.com/Squirrel-314/chat-playground-thing-yay#readme"
+  "homepage": "https://github.com/Squirrel-314/chat-playground-thing-yay#readme",
+  "dependencies": {
+    "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.1",
+    "nodemailer": "^6.7.8",
+    "peer": "^0.6.1",
+    "socket.io": "^4.5.2",
+    "tailwind": "^4.0.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
