--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/Squirrel-314/chat-playground-thing-yay#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "http": "0.0.1-security",
     "mongoose": "^6.6.1",
     "nodemailer": "^6.7.8",
     "peer": "^0.6.1",
