--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "chat-playground-thing",
+  "name": "chat-experiments",
   "version": "0.1.0",
-  "description": "A test area for my chat things",
+  "description": "A test area for my chat experiments",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "run-test"
+    "test": "run-test",
+    "tailwind": "npx tailwindcss -i styles/tailwind.config.css -o styles/tailwind.css --watch"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/editorrust/chat-playground#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
